#65 Docker: Change the user that runs the code inside the container